# empiarreader

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml  testing_empiar_retrieval.py
.github/workflows/: pytest.yml  python-publish.yml
components/: empiardirectory.py  mrcsource.py  starsource.py
docs/: index.rst
docs/source/: conf.py  contributing.rst  examples.rst  index.rst  installation.md  installation.rst  reference.rst
examples/: run_empiarreader.ipynb
intake_cryoem/: empiar.py  empiar_catalog.py  empreader.py  mrcsource.py  starsource.py
joss/: paper.bib  paper.md
src/empiarreader/: __init__.py  cli.py  mrcsource.py
src/empiarreader/empiar/: empiar.py
src/empiarreader/intake_source/: mrcsource.py  starsource.py
src/empiarreader/utilities/: download.py  intake.py  search.py
src/intake_cryoem/: empiar.py  starsource.py
tests/: test_cli.py  test_empiar_cache.py  test_empiar_retrieval.py  test_load_mrc.py  test_load_star.py
tests/fixtures/: 10934.xml  saved_search.txt  test_download.txt  tmp.mrc  tmp.star
