[tool.poetry]
name = "empiarreader"
version = "0.0.1"
description = ""
authors = ["mooniean <bcostagomes@turing.ac.uk>", "ots22 <ostrickson@turing.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
intake = "^0.6.5"
bs4 = "^0.0.1"
matplotlib = "^3.6.1"
requests = "^2.28.1"
scikit-image = "^0.19.3"
xarray = "^2022.9.0"
mrcfile = "^1.4.3"
starfile = "^0.4.11"
intake-xarray = "^0.6.1"
aiohttp = "^3.8.3"
setuptools = "^67.7.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git@master"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."intake.drivers"]
mrc = "empiarreader:MrcSource"
star = "empiarreader:StarSource"
empiar = "empiarreader:EmpiarCatalog"
