[tool.poetry]
name = "empiarreader"
version = "0.0.1"
description = ""
authors = ["mooniean <bcostagomes@turing.ac.uk>", "ots22 <ostrickson@turing.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
intake = "^0.6.5"
bs4 = "^0.0.1"
matplotlib = "^3.6.1"
requests = "^2.28.1"
scikit-image = "^0.19.3"
xarray = "^2022.9.0"
mrcfile = "^1.4.3"
starfile = "^0.4.11"
intake-xarray = "^0.6.1"
aiohttp = "^3.8.3"
setuptools = "^67.7.2"
pre-commit = "^3.3.3"

# Dependencies for 'extras'
Sphinx = { version = "^5.0", optional = true }
pydata-sphinx-theme = { version = "^0.7", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.poetry.extras]
doc = ["Sphinx", "pydata-sphinx-theme"]

[build-system]
requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git@main"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."intake.drivers"]
mrc = "empiarreader:MrcSource"
star = "empiarreader:StarSource"
empiar = "empiarreader:EmpiarCatalog"

[tool.poetry.scripts]
empiarreader = "empiarreader.cli:main"

[tool.poetry.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

